add paragraph to index file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <p> Hey there! I am using Git!</p>
-        
+        <p> working with git is fun!</p>
     </body>
     </html>
