--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <p> Hey there! I am using Git!</p>
         <p> working with git is fun!</p>
+        <a href="about.html">About</a>
     </body>
     </html>
