add cloud9 paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <p> Hey there! I am using Git!</p>
         <p> working with git is fun!</p>
+        <p>in cloud9 as well</p>
         <a href="about.html">About</a>
     </body>
     </html>
